[package]
name = "quinemccluskey-rs"
version = "0.1.0"
edition = "2021"
description = "An implementation of the quine mccluskey algorithm for minimization of boolean functions"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
